# storewright

./: .env.example  README.md  alembic.ini  release-tools.toml
tools/product-research/catalog-scout/: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  SPEC.md  alembic.ini  pyproject.toml
tools/product-research/catalog-scout/scripts/: release.py
tools/product-research/catalog-scout/src/storewright_catalog_scout/: __init__.py  cli.py  config.py  exceptions.py  logging.py
tools/product-research/catalog-scout/src/storewright_catalog_scout/adapters/: base.py  taobao.py
tools/product-research/catalog-scout/src/storewright_catalog_scout/alembic/: env.py
tools/product-research/catalog-scout/src/storewright_catalog_scout/browser/: cdp.py  chrome.py  detail_access.py  llm_factory.py  navigator.py  page_state.py  workspace_lock.py
tools/product-research/catalog-scout/src/storewright_catalog_scout/db/: migrations.py  models.py  repositories.py  session.py
tools/product-research/catalog-scout/src/storewright_catalog_scout/domain/: models.py  protocols.py
tools/product-research/catalog-scout/src/storewright_catalog_scout/extraction/: category.py  image_url.py  url_normalizer.py
tools/product-research/catalog-scout/src/storewright_catalog_scout/images/: processor.py
tools/product-research/catalog-scout/src/storewright_catalog_scout/matching/: rule_engine.py  shop_policy.py
tools/product-research/catalog-scout/src/storewright_catalog_scout/orchestration/: catalog.py  (+2 more)
tools/product-research/catalog-scout/tests/: conftest.py
tools/product-research/catalog-scout/tests/integration/: test_mock_e2e.py
tools/product-research/catalog-scout/tests/unit/: test_catalog_discovery.py  test_category.py  test_cli.py  test_detail_access.py  test_images.py  test_llm_factory.py  test_migrations.py  test_page_state.py  test_release_script.py  test_sampling.py  test_serpapi_provider.py  test_shop_policy.py  test_urls_and_adapter.py  test_vision_and_rules.py  test_workspace_lock.py
(+99 files in other folders)
