[project]
name = "storewright-catalog-scout"
version = "0.1.0"
description = "Auditable, resumable external image-match screening for authorized shops"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "aiosqlite>=0.20,<1",
  "alembic>=1.13,<2",
  "browser-use==0.13.6",
  "httpx>=0.27,<1",
  "imagehash>=4.3,<5",
  "jinja2>=3.1,<4",
  "pillow>=11,<13",
  "playwright>=1.50,<2",
  "pydantic>=2,<3",
  "pydantic-settings>=2,<3",
  "rich>=13,<15",
  "sqlalchemy>=2,<3",
  "structlog>=24,<27",
  "tldextract>=5,<6",
  "typer>=0.12,<1",
]

[project.scripts]
storewright-scout = "storewright_catalog_scout.cli:app"

[dependency-groups]
dev = [
  "pyright>=1.1,<2",
  "pytest>=8,<10",
  "pytest-asyncio>=0.24,<2",
  "pytest-cov>=5,<8",
  "ruff>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/storewright_catalog_scout"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src"]
exclude = [".venv"]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["storewright_catalog_scout"]
omit = [
  "src/storewright_catalog_scout/browser/cdp.py",
  "src/storewright_catalog_scout/browser/chrome.py",
  "src/storewright_catalog_scout/browser/llm_factory.py",
  "src/storewright_catalog_scout/browser/navigator.py",
  "src/storewright_catalog_scout/browser/prompts.py",
  "src/storewright_catalog_scout/cli.py",
  "src/storewright_catalog_scout/config.py",
  "src/storewright_catalog_scout/logging.py",
  "src/storewright_catalog_scout/vision/serpapi.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
